src/test/compile-fail/block-must-not-have-result-do.rs
// error-pattern:statement with non-unit type requires a semicolon

fn main() {
    do {
        true
    } while true;
}
